# communitization-bot

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
communitization-bot/: bot.py
communitization_bot/: ai.py  bot.py
src/: ai.py
