[tool.poetry]
name = "communitization-bot"
version = "0.1.0"
description = ""
authors = ["TOSUKUi"]
license = "MIT"
readme = "README.md"
packages = [{include = "communitization-bot"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
pyyaml = "^6.0"
discord = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
