[tool.poetry]
name = "communitization-bot"
version = "0.1.0"
description = ""
authors = ["TOSUKUi"]
license = "MIT"
readme = "README.md"
packages = [{include = "communitization_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.23.6"
discord = "^2.2.2"
python-dotenv = "^1.0.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
